# vida2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: default.frag
assets/shaders/fx/: disolve.frag  dissolve.frag  fog.frag  fog.vert  lit.frag  lit.vert  pulse.frag  pulse.vert  transparent.frag  transparent.vert
components/renderer2d/: CMakeLists.txt
components/renderer2d/include/vida/renderer2d/: Renderer2D.hpp
components/renderer2d/src/: Renderer2D.cpp
components/renderer3d/: CMakeLists.txt
components/renderer3d/include/vida/renderer3d/: Camera.hpp  FX.hpp  Renderer3D.hpp  Shader.hpp
components/renderer3d/src/: Camera.cpp  Renderer3D.cpp  Shader.cpp
components/texture/: CMakeLists.txt
components/texture/include/vida/texture/: Texture.hpp
components/texture/src/: Texture.cpp
components/window/: CMakeLists.txt
components/window/include/vida/window/: Window.hpp
components/window/src/: Window.cpp
core/: CMakeLists.txt
core/include/vida/core/: Color.hpp  Math.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  OBJLoader.hpp
core/src/: Color.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  OBJLoader.cpp
examples/: test.cpp  text.cpp
examples/basic/: CMakeLists.txt  main.cpp
include/: vida.hpp  vida2d.hpp
include/vida/: Engine.hpp  Event.hpp  Game.hpp  Vector.hpp  logger.h  types.h
include/vida/engine/: Engine.hpp  EventBus.hpp  engine.h
include/vida/engine/ui/: UI.hpp
include/vida/input/: Key.hpp  KeyMap.hpp  Mouse.hpp
include/vida/render/: Renderer.hpp
include/vida2d/: color.hpp  int_types.hpp  macros.hpp  render.hpp  vec.hpp
include/vida2d/render/: text.hpp
include/vida2d/time/: time.hpp
include/vida2d/window/: window.hpp
src/: Engine.cpp  engine.cpp  logger.c  main.cpp  vida2d.cpp
src/engine/: Engine.cpp  EventBus.cpp  engine.c
src/engine/ui/: UI.cpp
src/modules/render/: render.cpp  text.cpp
src/modules/time/: time.cpp
src/modules/window/: window.cpp
src/render/: Renderer.cpp  internal.cpp
src/utils/: vector.cpp
